k8s/simple-manifests/or-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
        app.kubernetes.io/name: manager
    spec:
      containers:
        - name: manager
          image: openremote/manager:latest
          ports:
            - containerPort: 8405
          volumeMounts:
            - mountPath: /storage
              name: manager-data
      volumes:
        - name: manager-data
          persistentVolumeClaim:
            claimName: manager-data-pvc
