k8s/simple-manifests/or-keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak

spec:
  selector:
    app.kubernetes.io/name: keycloak
  type: ClusterIP
  clusterIP: None
  ports:
    - name: web
      port: 8080
      targetPort: 8080
      protocol: TCP
