k8s/simple-manifests/or-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager

spec:
  selector:
    app.kubernetes.io/name: manager
  type: ClusterIP
  clusterIP: None
  ports:
    - name: web
      port: 8080
      targetPort: 8080
      protocol: TCP
