k8s/simple-manifests/or-psql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql

spec:
  selector:
    app.kubernetes.io/name: postgresql
  type: ClusterIP
  clusterIP: None
  ports:
    - name: psql
      port: 5432
      targetPort: 5432
      protocol: TCP
